# reDPD

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: reDPDConfig.cmake.in
src/: CMakeLists.txt  local_types.h  xmtensor.cc  xmtensor.h
src/libxm/: CMakeLists.txt  alloc.c  alloc.h  bitmap.h  blockspace.c  blockspace.h  contract.c  dim.c  dim.h  scalar.c  scalar.h  tensor.c  tensor.h  util.c  xm.c  xm.h
